--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,6 +7,7 @@
     tools:context=".view.ResultActivity">
 
     <TextView
+        android:id="@+id/result_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="153dp"
@@ -15,11 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/next_btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="There is an error while uploading the details!"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="251dp" />
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="124dp"
+        android:text="Next"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
