--- a/app/src/main/res/layout/activity_fetch.xml
+++ b/app/src/main/res/layout/activity_fetch.xml
@@ -37,11 +37,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
-        android:layout_marginLeft="161dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginRight="162dp"
         android:text="@string/fetch_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/student_uhid_ed" />
+
+    <ProgressBar
+        android:id="@+id/fetch_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="181dp"
+        android:layout_marginEnd="182dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/student_uhid_ed" />
